@@ -205,9 +205,11 @@ DRIVERNV(xenonfa )      //BY35      10/08 Xenon (French Free Play)
 DRIVERNV(flashgdn)      //BY35-834: 02/81 Flash Gordon
 DRIVERNV(flashgdv)      //BY35      02/81 Flash Gordon (Vocalizer sound)
 DRIVERNV(flashgdf)      //BY35      02/81 Flash Gordon (French)
+DRIVERNV(flashgvf)      //BY35      02/81 Flash Gordon (French Vocalizer sound)
 DRIVERNV(flashgda)      //BY35      10/08 Flash Gordon (Free Play)
 DRIVERNV(flashgva)      //BY35      10/08 Flash Gordon (Vocalizer sound Free Play)
 DRIVERNV(flashgfa)      //BY35      10/08 Flash Gordon (French Free Play)
+DRIVERNV(flashgvffp)    //BY35      10/08 Flash Gordon (French Vocalizer sound Free Play)
 DRIVERNV(flashgdp)      //BY35      ??/8? Flash Gordon (68701 hardware prototype)
 DRIVERNV(flashgp2)      //BY35      ??/8? Flash Gordon (6801 hardware prototype)
 DRIVERNV(eballd14)      //BY35-838: 04/81 Eight Ball Deluxe (rev. 14)
